# mfmg

./: .clang-format  .clang-tidy  .readthedocks.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md
ci/: Dockerfile  compile_and_run.sh  docker-compose.yml
cmake/: CodeCoverage.cmake  CodeFormat.cmake  CodeTidy.cmake  FindSphinx.cmake  SetupCUDA.cmake  SetupCache.cmake  SetupMFMG.cmake  SetupTPLs.cmake  SetupTests.cmake  Testing.cmake  mfmgConfig.cmake.in
doc/: CMakeLists.txt  conf.py  developer_tools.rst  index.rst  install.rst  overview.rst
include/mfmg/: adapters_dealii.hpp  amge.hpp  amge.templates.hpp  amge_device.cuh  amge_device.templates.cuh  amge_host.hpp  amge_host.templates.hpp  concepts.hpp  cuda_handle.cuh  cuda_hierarchy_helpers.cuh  cuda_matrix_operator.cuh  cuda_mesh_evaluator.cuh  cuda_smoother.cuh  cuda_solver.cuh  dealii_adapters.hpp  dealii_adapters_device.cuh  dealii_hierarchy_helpers.hpp  dealii_matrix_free_operator.hpp  dealii_matrix_operator.hpp  dealii_mesh.hpp  dealii_mesh_evaluator.hpp  dealii_operator.hpp  dealii_operator.templates.hpp  dealii_operator_device.cuh  dealii_operator_device.templates.cuh  dealii_operator_device_helpers.cuh  dealii_smoother.hpp  dealii_solver.hpp  dealii_trilinos_matrix_operator.hpp  dummy.hh  dummy.hpp  exceptions.hpp  hierarchy.hpp  hierarchy_helpers.hpp  instantiation.hpp  level.hpp  operator.hpp  smoother.hpp  solver.hpp  sparse_matrix_device.cuh  (+5 more)
include/mfmg/common/: amge.hpp  amge.templates.hpp  exceptions.hpp  hierarchy.hpp  hierarchy_helpers.hpp  instantiation.hpp  lanczos.hpp  lanczos.templates.hpp  lanczos_deflatedop.hpp  lanczos_deflatedop.templates.hpp  level.hpp  mesh_evaluator.hpp  operator.hpp  smoother.hpp  solver.hpp  utils.hpp
include/mfmg/cuda/: amge_device.cuh  amge_device.templates.cuh  cuda_handle.cuh  cuda_hierarchy_helpers.cuh  cuda_matrix_free_hierarchy_helpers.cuh  cuda_matrix_free_mesh_evaluator.cuh  cuda_matrix_free_operator.cuh  cuda_matrix_free_smoother.cuh  cuda_matrix_operator.cuh  cuda_mesh_evaluator.cuh  cuda_smoother.cuh  cuda_solver.cuh  dealii_operator_device_helpers.cuh  sparse_matrix_device.cuh  sparse_matrix_device.templates.cuh  utils.cuh  vector_device.cuh  vector_device.templates.cuh
include/mfmg/dealii/: amge_host.hpp  amge_host.templates.hpp  anasazi.hpp  anasazi.templates.hpp  anasazi_traits.hpp  belos_traits.hpp  dealii_hierarchy_helpers.hpp  dealii_matrix_free_hierarchy_helpers.hpp  dealii_matrix_free_mesh_evaluator.hpp  dealii_matrix_free_operator.hpp  dealii_matrix_free_smoother.hpp  dealii_matrix_operator.hpp  dealii_mesh_evaluator.hpp  dealii_smoother.hpp  dealii_solver.hpp  dealii_trilinos_matrix_operator.hpp  dealii_utils.hpp  lanczos.hpp  lanczos.templates.hpp  lanczos_deflatedlanczos.hpp  lanczos_deflatedlanczos.template.hpp  lanczos_deflatedlanczos.templates.hpp  lanczos_deflatedop.hpp  lanczos_deflatedop.template.hpp  lanczos_deflatedop.templates.hpp  lanczos_lanczos.hpp  lanczos_lanczos.template.hpp  lanczos_lanczos.templates.hpp  lanczos_simpleop.hpp  lanczos_simpleop.template.hpp  lanczos_simplevector.hpp  lanczos_simplevector.template.hpp  lanczos_simplevector.templates.hpp  multivector.hpp
scripts/: 0001-Enable-ARPACK-in-regular-mode.patch  0002-Avoid-copying-shape-info.patch
source/: CMakeLists.txt  amge.cc  amge_device.cu  amge_host.cc  cuda_handle.cu  cuda_hierarchy_helpers.cu  cuda_matrix_operator.cu  cuda_mesh_evaluator.cu  cuda_smoother.cu  cuda_solver.cu  dealii_hierarchy_helpers.cc  dealii_matrix_free_operator.cc  dealii_matrix_operator.cc  dealii_mesh_evaluator.cc  dealii_operator.cc  dealii_operator_device.cu  dealii_operator_device_helpers.cu  dealii_smoother.cc  dealii_solver.cc  dealii_trilinos_matrix_operator.cc  dummy.cc  sparse_matrix_device.cu  utils.cc  utils.cu  vector_device.cu
source/common/: CMakeLists.txt  amge.cc  lanczos.cu  utils.cc
source/cuda/: CMakeLists.txt  amge_device.cu  cuda_handle.cu  cuda_hierarchy_helpers.cu  cuda_matrix_free_hierarchy_helpers.cu  cuda_matrix_free_mesh_evaluator.cu  cuda_matrix_free_operator.cu  cuda_matrix_free_smoother.cu  cuda_matrix_operator.cu  cuda_mesh_evaluator.cu  cuda_smoother.cu  cuda_solver.cu  dealii_operator_device_helpers.cu  sparse_matrix_device.cu  utils.cu  vector_device.cu
source/dealii/: CMakeLists.txt  amge_host.cc  dealii_hierarchy_helpers.cc  dealii_matrix_free_hierarchy_helpers.cc  dealii_matrix_free_mesh_evaluator.cc  dealii_matrix_free_operator.cc  dealii_matrix_free_smoother.cc  dealii_matrix_operator.cc  dealii_mesh_evaluator.cc  dealii_smoother.cc  dealii_solver.cc  dealii_trilinos_matrix_operator.cc  dealii_utils.cc
tests/: CMakeLists.txt  hierarchy_driver.cc  lanczos_simpleop.hpp  lanczos_simpleop.templates.hpp  lanczos_simplevector.hpp  lanczos_simplevector.templates.hpp  laplace.hpp  laplace_matrix_free.hpp  laplace_matrix_free_device.cuh  main.cc  material_property.hpp  test_agglomerate.cc  test_amgx_direct_solver.cu  test_anasazi.cc  test_direct_solver_device.cu  test_dummy.cc  test_eigenvectors.cc  test_eigenvectors_device.cu  test_hierarchy.cc  test_hierarchy_device.cu  test_hierarchy_helpers.hpp  test_hierarchy_helpers_device.cuh  test_lanczos.cc  test_lanczos_device.cu  test_laplace.cc  test_laplace_matrix_free.cc  test_laplace_matrix_free_device.cu  test_restriction_matrix.cc  test_restriction_matrix_device.cu  test_smoother_device.cu  test_sparse_matrix_device.cu  test_sparse_matrix_device_operator.cu  test_utils.cc  test_utils.cu  test_utils_device.cu
tests/data/: amgx_config_amg.json  amgx_config_fgmres.json  hierarchy_input.info
