FIND_PACKAGE(Sphinx REQUIRED)

ADD_CUSTOM_TARGET(documentation ALL
  ${SPHINX_EXECUTABLE} -q -b html "${CMAKE_CURRENT_SOURCE_DIR}"
  "${CMAKE_CURRENT_BINARY_DIR}/html"
  COMMENT "BUILDING HTML documentation with Sphinx"
  )

INSTALL(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html"
  DESTINATION "${CMAKE_INSTALL_PREFIX}/doc"
  )
